# ad-reference

./: .gitignore  api.yaml  docker-compose.yml  plan.md
backend/: Dockerfile  api.py  conn.py  migrate.py  pyproject.toml
backend/activity/: list.py  model.py
backend/ads/: batch_embed.py  batch_extract_script.py  batch_s3_migrate.py  batch_update_concepts.py  detail.py  embedding.py  extract_script.py  generate_concept_script.py  migrate_product_tables.py  model.py  save.py  search.py  update_selling_points.py  video_proxy.py
backend/ads/output/: ads_model_20260223_142707.json
backend/auth/: login.py  logout.py  model.py  refresh.py  register.py
backend/auth/output/: auth_model_20260223_142707.json
backend/boards/: add_item.py  create.py  delete.py  detail.py  list.py  model.py  remove_item.py  share.py  shared_detail.py  unshare.py  update.py
backend/boards/output/: boards_model_20260223_142726.json
backend/comments/: create.py  delete.py  list.py  model.py
backend/featured/: add.py  list.py  model.py  remove.py
backend/users/: list_users.py  model.py  profile.py  reset_password.py  update.py  update_user_admin.py
backend/users/output/: users_model_20260223_142726.json
backend/utils/: activity_log.py  auth_helper.py  daily_stats.py  serialize.py  validation.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api-client.ts  loading-bar.ts  utils.ts
frontend/src/pages/: AdDetailPage.tsx  BoardDetailPage.tsx  (+11 more)
(+51 files in other folders)
